--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -14,7 +14,7 @@ jobs:
   job1:
     environment:
       name: staging
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       # environment variable using github secrets
       DATABASE_HOSTNAME: ${{ secrets.DATABASE_HOSTNAME }}
