--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.44
+sqlalchemy-cockroachdb==2.0.1
 starlette==0.20.4
 typing_extensions==4.4.0
 ujson==5.5.0
